--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,23 @@ form {
 }
 input[type=text] {
 	padding: 10px;
-	width: 30%;
+	width: 40%;
 	border-radius: 25px;
 	font-size: 25px;
+	margin: 5px;
+}
+input[type=submit] {
+	font-size: 25px;
+	border-radius: 5px;
+}
+
+input[type=submit]:hover {
+	color:white;
+	background-color:blue;
+}
+label {
+	font-size: 30px;
+	font-family: Arial;
 }
 h1 {
 	text-align: center;
@@ -20,4 +34,21 @@ h1 {
 #redirect {
 	float: right;
 	padding: 40px;
+}
+#image_button {
+	color:white;
+	background: blue;
+	font-size: 25px;
+	border-radius: 5px;
+}
+a {
+	text-decoration: none;
+	color: black;
+	padding: 4px;
+	margin: 2px;
+}
+a:hover {
+  text-decoration: none;
+  color:white;
+  background-color:blue;
 }
